@@ -1,6 +1,8 @@
 trunk
 =====
 * turn off jiggling of free parameters with starting values of 0.0 when useOptimizer=FALSE
+* allow non-RAM objective functions in RAM model
+* change model type names to 'default' and 'RAM'
 
 Pre-Release 999.0.0-1609 (April 7, 2011)
 ========================================
